--- a/app/src/main/res/navigation/nav_terreno.xml
+++ b/app/src/main/res/navigation/nav_terreno.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_terreno">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_terreno"
+    app:startDestination="@id/listadoTerreno">
 
+    <fragment
+        android:id="@+id/listadoTerreno"
+        android:name="com.example.ej5m6.ListadoTerreno"
+        android:label="fragment_listado_terreno"
+        tools:layout="@layout/fragment_listado_terreno" />
 </navigation>
