Ej7m6 se creo el tv id en detalle fragment con binding, y listener en adapter mas layout de detalle fragment

--- a/app/src/main/res/navigation/nav_terreno.xml
+++ b/app/src/main/res/navigation/nav_terreno.xml
@@ -9,5 +9,18 @@
         android:id="@+id/listadoTerreno"
         android:name="com.example.ej5m6.ListadoTerreno"
         android:label="fragment_listado_terreno"
-        tools:layout="@layout/fragment_listado_terreno" />
+        tools:layout="@layout/fragment_listado_terreno" >
+        <action
+            android:id="@+id/action_listadoTerreno_to_detalleFragment"
+            app:destination="@id/detalleFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detalleFragment"
+        android:name="com.example.ej5m6.presentation.DetalleFragment"
+        android:label="fragment_detalle"
+        tools:layout="@layout/fragment_detalle" >
+        <action
+            android:id="@+id/action_detalleFragment_to_listadoTerreno"
+            app:destination="@id/listadoTerreno" />
+    </fragment>
 </navigation>
