Ej7m6 se implementaron it y id en tereno Dao View Mpdel y Repositorio detalle fragment layout parametros de bundle y navigation

--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -2,30 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".presentation.DetalleFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/tvID"
-        android:layout_width="109dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="32dp"
-        android:text="Id"
+        android:layout_width="95dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="40dp"
+        android:text="id"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toEndOf="@+id/imag"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imag" />
 
     <TextView
         android:id="@+id/tvPrice"
-        android:layout_width="91dp"
-        android:layout_height="31dp"
+        android:layout_width="95dp"
+        android:layout_height="42dp"
         android:layout_marginTop="15dp"
         android:text="Precio"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/tvID"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvID"
@@ -35,8 +38,10 @@
         android:id="@+id/tvType"
         android:layout_width="91dp"
         android:layout_height="40dp"
-        android:layout_marginTop="32dp"
-        android:text="tipo"
+        android:layout_marginTop="16dp"
+        android:text="Tipo"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/tvPrice"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvPrice"
@@ -44,10 +49,10 @@
 
     <ImageView
         android:id="@+id/imag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_width="376dp"
+        android:layout_height="178dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.053"
